# .mydotfiles

./: .gitignore  README.md  nwg-dock-hyprland
anyrun/: applications.ron  config.ron  style.css
btop/: btop.conf
config/: dolphinrc  kdeglobals
funke/: pyproject.toml
funke/config/: config.json
funke/funke/: __init__.py  app_entry.py  cli.py  constants.py  db.py  ddg_search.py  indexer.py  indexer_apps.py  indexer_files.py  query.py
funke/systemd/: funke-indexer.service  funke-indexer.timer
hyprland/: _hyprland.lua  animation.conf  animation.lua  autostart.conf  autostart.lua  colors.conf  colors.lua  cursor.conf  cusrsor.lua  decoration.conf  decoration.lua  environment.conf  environment.lua  hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  hyprpaper.conf  hyprpaper.conf.backup  keybinding.conf  keybindings.lua  keyboard.conf  keyboard.lua  layout.conf  layout.lua  misc.conf  misc.lua  monitors.conf  monitors.lua  window.conf  window.lua  windowrule.conf  windowrule.lua  workspace.conf  workspace.lua
kitty/: kitty.conf
nwg-dock-hyprland/: launch.sh  style.css
quickshell/: Bar.qml  BarButton.qml  InfoCard.qml  MusicFlyout.qml  MusicPlayer.qml  MusicWidget.qml  NotificationCard.qml  NotificationService.qml  NotificationToast.qml  NotificationWidget.qml  Notifications.qml  SideMenu.qml  SideMenuLeft.qml  SideMenuRight.qml  StatsCard.qml  TopBar.qml  WorkspacesWidget.qml  shell.qml
sddm/: install.sh
shared/: kdeglobals
shell/: .bashrc  .zshrc
swaync/: config.json  style.css
waybar/: colors.css  config  modules.json  style.css
(+179 files in other folders)
